# pywal-reloaded

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .sourcery.yaml  CHANGELOG.md  LICENSE.md  README.md  main.code-workspace  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.gitpod/: Dockerfile
pywal/: __init__.py  __main__.py  colors.py  config.py  export.py  image.py  reload.py  sequences.py  settings.py  theme.py  util.py  utils.py  wallpaper.py
pywal/backends/: colorthief.py  colorz.py  fast_colorthief.py  haishoku.py  material.py  schemer2.py  wal.py
pywal/scripts/: gtk_reload.py
tests/: test_export.py  test_sequences.py  test_util.py
