[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pywal-reloaded"
description = "Generate and change color-schemes on the fly"
authors = [
    {name = "Deathemonic", email = "deathemonic@gmail.com"},
    {name = "Dylan Araps", email = "dylan.araps@gmail.com"}
]
maintainers = [{name = "Deathemonic", email = "deathemonic@gmail.com"}]
version = "4.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["wal", "colorscheme", "changing-colorschemes", "material"]
classifiers = [
        "Environment :: X11 Applications",
        "License :: OSI Approved :: MIT License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.10"
]
